# gaia

./: .gitignore  Makefile  README.md  pyproject.toml
damforge/: README.md  __init__.py  config.py  dam.py  export.py  generate.py  mesh.py  properties.py  scenario.py  validate.py  visualize.py
output/scenario_0001/: config.json  labels.npy  mesh.bms
output/scenario_0001/state_0/: resistivity.npy  velocity.npy
output/scenario_0001/state_1/: density.npy  resistivity.npy  velocity.npy
output/scenario_0001/state_2/: resistivity.npy  velocity.npy
output/scenario_0002/: config.json  labels.npy  mesh.bms
output/scenario_0002/state_0/: resistivity.npy  velocity.npy
output/scenario_0002/state_1/: density.npy  resistivity.npy  velocity.npy
output/scenario_0002/state_2/: resistivity.npy  velocity.npy
output/scenario_0003/: config.json  labels.npy  mesh.bms
output/scenario_0003/state_0/: density.npy  resistivity.npy  velocity.npy
output/scenario_0003/state_1/: density.npy  resistivity.npy  (+1 more)
output/scenario_0004/: config.json  labels.npy  mesh.bms
output/scenario_0005/: config.json  labels.npy  mesh.bms
output/scenario_0006/: config.json  labels.npy  mesh.bms
output/scenario_0007/: config.json  labels.npy  mesh.bms
output/scenario_0008/: config.json  labels.npy  mesh.bms
output/scenario_0009/: config.json  labels.npy  mesh.bms
output/scenario_0010/: config.json  labels.npy  mesh.bms
sim_outputs/scenario_0001/: config.json  labels.npy  mesh.bms
sim_outputs/scenario_0002/: config.json  labels.npy  mesh.bms
sim_outputs/scenario_0003/: config.json  labels.npy  mesh.bms
sim_outputs/scenario_0004/: config.json  labels.npy  mesh.bms
sim_outputs/scenario_0005/: config.json  labels.npy  mesh.bms
simulations/: base.py  ert.py  main.py  run_ert.py  run_seismic.py  seismic.py
tests/: test_config.py  test_dam.py  test_scenario.py
(+69 files in other folders)
